refactor: Move Safety Manager to system-level architecture
- Relocated Safety Manager from articulated_chassis subsystem to system-level module
- Enhanced Safety Manager to oversee all vehicle systems (chassis, hydraulics, boom, bucket, articulation, power, thermal)
- Added SystemSafety.msg for comprehensive system-wide safety status reporting
- Implemented 5-level safety system (NORMAL, CAUTION, WARNING, CRITICAL, EMERGENCY)
- Added comprehensive fault detection for all vehicle subsystems
- Expanded safety permit system for hydraulic operations, boom/bucket operations, articulation, and engine start
- Added complete BSP for CUAV X7+ WL wheel loader controller
- Created system initialization script for early safety manager startup

This architectural improvement centralizes safety management at the system level,
providing better oversight and coordination across all vehicle subsystems.

--- a/design/TODO
+++ b/design/TODO
@@ -1,7 +1,7 @@
-1. front wheel control update
-2. using quad Encoder
-3. using H Bridge
-4. msg name del folder
-5. module name
-6. extend chassis control to wheel loader control
-7. add wheel loader link make upper layer controller agnostic to lowe layer
+1. simplify steering
+2. hydralic to elctric
+3. gpio pin for limit switch
+4. add limit switch module
+5. limit switch to safety
+6. limit switch to h bridge
+7. quad encoder gpio
