Refactor wheel loader control modules: rename files and update sensor/actuator mapping
- Rename all controller classes from PascalCase to snake_case:
  * SteeringController -> steering_controller
  * WheelController -> wheel_controller
  * BoomControl -> boom_control
- Update sensor/actuator message mapping to use specific hardware messages:
  * wheel_encoders -> sensor_quad_encoder
  * actuator_motors -> hbridge_cmd
  * sensor_mag -> sensor_as5600
- Add comprehensive sensor/actuator mapping documentation
- Update all CMakeLists.txt files for new file names
- Enhance bucket_control module.yaml with proper parameters
- Create missing main.cpp files for boom_control and bucket_control
- Update TODO with steering limits and sensor mapping items

This refactoring improves code consistency and aligns with hardware-specific messaging requirements.

--- a/design/TODO
+++ b/design/TODO
@@ -1,3 +1,4 @@
 explain limit sensor global param
-controll module need to confirm sensor used quad encoder, h bridge as6500
 add ahrs
+steering limit
+sensor actuactor mapping
