--- a/design/TODO
+++ b/design/TODO
@@ -1,3 +1,3 @@
-explain limit sensor global param
-add ahrs
-update bukcet comand msg
+is torque distribution logic working?
+add anchor manage
+uwb enable
